pequeño cambio en index

--- a/index.html
+++ b/index.html
@@ -31,73 +31,81 @@ font-size:larger;
             }
             .titulo {
                 text-align: center;
-
-
-
-
-
-
-
-
                 font-size: xx-large;
             }
-        
     </style>
 </head>
-
 <body>
     <div class="titulo" style="text-align: center;">
-        <img src="images/cabecera1.jpg" alt="Equipo de jugger" height="200px" width="1000px">
-      <p style= "font-size: xx-large;">Página oficial de Nevaditos Jugger Club</p>
+        <img
+            src="images/cabecera1.jpg"
+            alt="Equipo de jugger"
+            height="200px"
+            width="1000px"
+        >
+        <p style="font-size: xx-large;">Página oficial de Nevaditos Jugger Club</p>
     </div>
-
-
-
-    <nav class="navegador"> 
-    <div><a href="">| Galería |</a>
+    <nav class="navegador">
+        <div>
+            <a href="">| Galería |</a>
             <a href="">| Tienda |</a>
             <a href="#contacto">| Contacto |</a>
             <a href="#torneos">| Próximos torneos |</a>
-
         </div>
     </nav>
-    <article class="seccion" >
+    <article class="seccion">
         <div class="subtitulo">
             <h3>Nuevas camisetas del equipo</h3>
         </div>
         <p>Tras una larga espera, el equipo ya tiene preparado el nuevo diseño listo para su venta. El precio para socios es de 10€, manteniendo el coste inicial de 15€ para los recién llegados.</p>
-        <img src="images/camiseta.jpg" alt="Camiseta de jugger" width="350" height="350">
+        <img
+            src="images/camiseta.jpg"
+            alt="Camiseta de jugger"
+            width="350"
+            height="350"
+        >
     </article>
-    <article class="seccion" style="position: absolute; left: 750px; top: 340px;" >
+    <article class="seccion" style="position: absolute; left: 750px; top: 340px;">
         <div class="subtitulo">
             <h3>Entrenamientos abiertos durante el mes de diciembre</h3>
         </div>
-        <p>Aprovechando la llegada del puente, la Asociación de Jugger Granada permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
-            <br> Podéis inscribiros a través del siguiente <a href="" style="color: blue;">enlace</a>.
-            <br> La inscripción está reservada a los primeros 20 jugadores que se inscriban. Estos serán asignados a un equipo para la participación en los entrenos.
+        <p>
+            Aprovechando la llegada del puente, la Asociación de Jugger Granada permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
+            <br>
+            Podéis inscribiros a través del siguiente
+            <a href="" style="color: blue;">enlace</a>
+            .
+            <br>
+            La inscripción está reservada a los primeros 20 jugadores que se inscriban. Estos serán asignados a un equipo para la participación en los entrenos.
         </p>
         <img src="images/combate.jpg" alt="Partido de Jugger" width="600px style text-align center">
     </article>
     <aside class="seccion" style="position: absolute; left:  1500px; top: 340px; width: 250;">
-<div class="subtitulo">
-    <h3>Alineación</h3>
-</div>
-<p>
-<strong>Plantilla principal del equipo</strong>
-<br>
-
-    Kette: Dani
-    <br>Anti principal: Marga
-    <br>Anti secundario: Juan
-    <br>Escolta: Lucía
-    <br>Corredora: Drinna
-</p>
-<strong>Suplentes <br></strong>
-    Juego abierto: Pedro
-    <br>Segundo escolta: Nono
-</p>
-<img src="images/alineación.jpg" alt="Alineación del equipo" style="width: 220px; height: 350px;">
-    </aside>
+        <div class="subtitulo">
+            <h3>Alineación</h3>
+        </div>
+        <p>
+            <strong>Plantilla principal del equipo</strong>
+            <br>
+            Kette: Dani
+            <br>
+            Anti principal: Marga
+            <br>
+            Anti secundario: Juan
+            <br>
+            Escolta: Lucía
+            <br>
+            Corredora: Drinna
+        </p>
+        <strong>
+            Suplentes
+            <br>
+        </strong>
+        Juego abierto: Pedro
+        <br>
+        Segundo escolta: Nono
+    </p>
+    <img src="images/alineación.jpg" alt="Alineación del equipo" style="width: 220px; height: 350px;">
+</aside>
 </body>
-
 </html>
