--- a/tienda.html
+++ b/tienda.html
@@ -60,8 +60,8 @@ font-size:larger;
         <p style="font-size: xx-large;">Página oficial de Nevaditos Jugger Club</p>
     </div>
     <nav class="navegador">
-        <a href="" style="color: blue;">| Galería |</a>
-        <a href="" style="color: blue;">| Tienda |</a>
+        <a href="index.html#C2" style="color: blue;">| Galería |</a>
+        <a href="tienda.html" style="color: blue;">| Tienda |</a>
         <a href="index.html#C1" style="color: blue;">| Contacto |</a>
         <a href="index.html#torneos" style="color: blue;">| Próximos torneos |</a>
     </nav>
