formulario de participación

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ font-size:larger;
             permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
         <br>
         Para inscribirte
-        <a href="" style="color: blue;">Pulsa aquí.</a>
+        <a href="#C2" style="color: blue;">Pulsa aquí.</a>
         <br>
         La inscripción está reservada a los primeros 20 jugadores que se inscriban.
              Estos serán asignados a un equipo para la participación en los entrenos.
@@ -127,7 +127,7 @@ font-size:larger;
 </p>
 <img src="images/alineación.jpg" alt="Alineación del equipo" style="width: 220px; height: 350px; ">
 </aside>
-<nav class="cuestionario" id="C1" style="position: absolute; top: 1300px;">
+<nav class="cuestionario" id="C1" style="position: absolute; top: 2000px;">
     <h2 style="margin: 5px;">Formulario de contacto:</h2>
     <p style="margin: 5px;">Si desea realizar alguna consulta, agradecemos el contacto a través del siguiente formulario.</p>
     <article class="seccionCuest">
@@ -155,21 +155,55 @@ font-size:larger;
             <label for="otro">Otros motivos</label>
             <br>
             <textarea name="mensaje" rows="10" cols="50"> Explique brevemente el motivo de su consulta</textarea>
+            <br>
+            <input type="submit">
         </div>
     </article>
 </nav>
-
-<div style="position:absolute; top: 1900px; background-color:rgb(216, 235, 235); text-align: center;">
-    <div style="background-color: rgb(26, 23, 23); height: 1px; width: 1850;"></div> 
-
-<h4>Práctica de desarrollo de página web en HTML</h4>
-<p>IES Zaidín Vergeles <br>
-Alumno: Daniel Fontalva Ostio <br>
-Asignatura: Lenguaje de Marcas <br>
-Primer Trimestre <br>
-</p>
-
+<nav class="cuestionario" id="C2" style="position: absolute; top: 2000px; left: 1000px;">
+    <h2 style="margin: 5px;">Participación en entrenos abiertos</h2>
+    <p style="margin: 5px;">Para participar en los entrenos abiertos de diciembre, rellene el siguiente formulario:</p>
+    <article class="seccionCuest">
+        <div style="margin: 5px;">
+            <label for="nombre">
+                <h3>Nombre:</h3>
+            </label>
+            <input type="text" id="nombre">
+            <label for="correo">
+                <h3>Correo electrónico:</h3>
+            </label>
+            <input type="email" id="correo">
+            <h3>Horario en el que asistirá.</h3>
+            <input type="checkbox" id="horario">
+            <label for="horario">5/12 - 12:00</label>
+            <br>
+            <input type="checkbox" id="horario2">
+            <label for="horario2">12/12 - 16:00</label>
+            <br>
+            <input type="checkbox" id="horario3">
+            <label for="horario3">19/12 - 12:00</label>
+            <br>
+            <input type="checkbox" id="horario4">
+            <label for="horario4">26/12 - 16:00</label>
+            <br>
+            <br>
+            <input type="submit">
+        </div>
+    </article>
+</nav>
+<div style="position:absolute; top: 2700px; background-color:rgb(216, 235, 235); text-align: center;">
+    <div style="background-color: rgb(26, 23, 23); height: 1px; width: 1850;"></div>
+    <h4>Práctica de desarrollo de página web en HTML</h4>
+    <p>
+        IES Zaidín Vergeles
+        <br>
+        Alumno: Daniel Fontalva Ostio
+        <br>
+        Asignatura: Lenguaje de Marcas
+        <br>
+        Primer Trimestre
+        <br>
+    </p>
 </div>
-
 </body>
 </html>
