--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ font-size:larger;
         <a href="">| Galería |</a>
         <a href="">| Tienda |</a>
         <a href="#C1">| Contacto |</a>
-        <a href="#torneos">| Próximos torneos |</a>
+        <a href="#entrenos">| Próximos entrenos |</a>
     </nav>
 </div>
 <p style="text-align: center; font-size: xx-large;">Novedades</p>
@@ -105,8 +105,8 @@ font-size:larger;
         Aprovechando la llegada del puente, la Asociación de Jugger Granada 
             permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
         <br>
-        Para inscribirte
-        <a href="#C2" style="color: blue; font-size: medium;">Pulsa aquí.</a>
+        
+        <a href="#Centrenos" style="color: blue; font-size: medium;"> Para inscribirte pulsa aquí.</a>
         <br>
         La inscripción está reservada a los primeros 20 jugadores que se inscriban.
              Estos serán asignados a un equipo para la participación en los entrenos.
@@ -179,7 +179,7 @@ font-size:larger;
             </div>
         </article>
     </nav>
-    <nav class="cuestionario" id="C2">
+    <nav class="cuestionario" id="entrenos">
         <h2 style="margin: 5px;">Participación en entrenos abiertos:</h2>
         <p style="margin: 5px;">Para participar en los entrenos abiertos de diciembre, rellene el siguiente formulario:</p>
         <article class="seccionCuest">
