--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ font-size:larger;
         <p style="font-size: xx-large;">Página oficial de Nevaditos Jugger Club</p>
     </div>
     <nav class="navegador" style="text-align: center;">
-        <a href="">| Galería |</a>
-        <a href="">| Tienda |</a>
-        <a href="#C1">| Contacto |</a>
+        <a href="galeria">| Galería |</a>
+        <a href="tienda.html">| Tienda |</a>
+        <a href="contacto.html">| Contacto |</a>
         <a href="#entrenos">| Próximos entrenos |</a>
     </nav>
 </div>
@@ -105,7 +105,6 @@ font-size:larger;
         Aprovechando la llegada del puente, la Asociación de Jugger Granada 
             permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
         <br>
-        
         <a href="#Centrenos" style="color: blue; font-size: medium;"> Para inscribirte pulsa aquí.</a>
         <br>
         La inscripción está reservada a los primeros 20 jugadores que se inscriban.
@@ -145,40 +144,7 @@ font-size:larger;
 </p>
 <img src="images/alineación.jpg" style="margin: 5px; width: 220px; height: 350px; " alt="Alineación del equipo">
 </aside>
-<div style="float: left;">
-    <nav class="cuestionario" id="C1">
-        <h2 style="margin: 5px;">Formulario de contacto:</h2>
-        <p style="margin: 5px;">Si desea realizar alguna consulta, agradecemos el contacto a través del siguiente formulario.</p>
-        <article class="seccionCuest">
-            <div style="margin: 5px;">
-                <label for="nombre">
-                    <h3>Nombre:</h3>
-                </label>
-                <input type="text" id="nombre">
-                <label for="correo">
-                    <h3>Correo electrónico:</h3>
-                </label>
-                <input type="email" id="correo">
-                <br>
-                <h3>Indique el motivo de su consulta:</h3>
-                <input type="radio" id="compra" name="tematica">
-                <label for="compra">Problemas con la tienda</label>
-                <br>
-                <input type="radio" id="jugar" name="tematica">
-                <label for="jugar"> Participar en las actividades</label>
-                <br>
-                <input type="radio" id="información" name="tematica">
-                <label for="información"> Recibir información</label>
-                <br>
-                <input type="radio" id="otro" name="tematica">
-                <label for="otro">Otros motivos</label>
-                <br>
-                <textarea name="mensaje" rows="10" cols="50"> Explique brevemente el motivo de su consulta</textarea>
-                <br>
-                <input type="submit">
-            </div>
-        </article>
-    </nav>
+
     <nav class="cuestionario" id="entrenos">
         <h2 style="margin: 5px;">Participación en entrenos abiertos:</h2>
         <p style="margin: 5px;">Para participar en los entrenos abiertos de diciembre, rellene el siguiente formulario:</p>
@@ -222,20 +188,6 @@ font-size:larger;
             referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
     </div>
-    <footer style=" text-align: center;">
     </nav>
-    <div>
-        <h4>Práctica de desarrollo de página web en HTML</h4>
-        <p>
-            IES Zaidín Vergeles
-            <br>
-            Alumno: Daniel Fontalva Ostio
-            <br>
-            Asignatura: Lenguaje de Marcas
-            <br>
-            Primer Trimestre
-            <br>
-        </p>
-    </div>
 </body>
 </html>
