introducción de la página entrenos y galería

--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contacto</title>
+        <title>Página principal</title>
         <link rel="icon" type="x-icon" href="images/nevadito.jpg">
         <meta name="author" content="Daniel Fontalva Ostio">
         <meta name="ciclo" content="1ºDAW IES Zaidín Vergeles">
@@ -79,41 +79,8 @@ font-size:larger;
             <a href="entrenos.html">| Próximos entrenos |</a>
         </nav>
     </div>
-    <div style="float: left;">
-        <nav class="cuestionario">
-            <h2 style="margin: 5px;">Formulario de contacto:</h2>
-            <p style="margin: 5px;">Si desea realizar alguna consulta, agradecemos el contacto a través del siguiente formulario.</p>
-            <article class="seccionCuest">
-                <div style="margin: 5px;">
-                    <label for="nombre">
-                        <h3>Nombre:</h3>
-                    </label>
-                    <input type="text" id="nombre">
-                    <label for="correo">
-                        <h3>Correo electrónico:</h3>
-                    </label>
-                    <input type="email" id="correo">
-                    <br>
-                    <h3>Indique el motivo de su consulta:</h3>
-                    <input type="radio" id="compra" name="tematica">
-                    <label for="compra">Problemas con la tienda</label>
-                    <br>
-                    <input type="radio" id="jugar" name="tematica">
-                    <label for="jugar"> Participar en las actividades</label>
-                    <br>
-                    <input type="radio" id="información" name="tematica">
-                    <label for="información"> Recibir información</label>
-                    <br>
-                    <input type="radio" id="otro" name="tematica">
-                    <label for="otro">Otros motivos</label>
-                    <br>
-                    <textarea name="mensaje" rows="10" cols="50"> Explique brevemente el motivo de su consulta</textarea>
-                    <br>
-                    <input type="submit">
-                </div>
-            </article>
-        </nav>
-    </div>
-   
-</body>
+
+
+
+    </body>
 </html>
