--- a/tienda.html
+++ b/tienda.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,52 +69,13 @@ font-size:larger;
         <p style="font-size: xx-large;">Página oficial de Nevaditos Jugger Club</p>
     </div>
     <nav class="navegador" style="text-align: center;">
-        <a href="galeria">| Galería |</a>
-        <a href="tienda">| Tienda |</a>
-        <a href="contacto">| Contacto |</a>
-        <a href="entrenos">| Próximos entrenos |</a>
+        <a href="index.html">| Novedades |</a>
+        <a href="galeria.html">| Galería |</a>
+        <a href="tienda.html">| Tienda |</a>
+        <a href="contacto.html">| Contacto |</a>
+        <a href="entrenos.html">| Próximos entrenos |</a>
     </nav>
 </div>
-<p style="text-align: center; font-size: xx-large;">Novedades</p>
-<article class="seccion">
-    <div class="subtitulo">
-        <h3>Nuevas camisetas del equipo</h3>
-    </div>
-    <p>
-        Tras una larga espera, el equipo ya tiene preparado el nuevo diseño listo para su venta. 
-            El precio para socios es de 10€, manteniendo el coste inicial de 15€ para los recién llegados.
-        <br>
-        Las camisetas utilizan un tejido deportivo con alta transpirabilidad que se adapta a tus prácticas deportivas.
-        <br>
-        <a href="tienda.html" style="color: blue; font-size: medium;">Pulsa aquí para saber más.</a>
-    </p>
-    <img
-        src="images/camiseta.jpg"
-        alt="Camiseta de jugger"
-        width="350"
-        height="355"
-        style="margin: 5px;"
-    >
-</article>
-<article class="seccion">
-    <div class="subtitulo">
-        <h3>Entrenamientos abiertos durante el mes de diciembre</h3>
-    </div>
-    <p>
-        Aprovechando la llegada del puente, la Asociación de Jugger Granada 
-            permitirá el acceso gratuito a todos aquellos jugadores que quieran probar el deporte.
-        <br>
-        Para inscribirte
-        <a href="#C2" style="color: blue; font-size: medium;">Pulsa aquí.</a>
-        <br>
-        La inscripción está reservada a los primeros 20 jugadores que se inscriban.
-             Estos serán asignados a un equipo para la participación en los entrenos.
-    </p>
-    <img
-        src="images/combate.jpg"
-        style="margin: 5px;"
-        alt="Partido de Jugger"
-        width="600px style text-align center"
-    >
-</article>
+
 </body>
+</html>
