cambios estéticos y mejora de la página contacto

--- a/entrenos.html
+++ b/entrenos.html
@@ -27,7 +27,8 @@ border: 1px solid black;
                 background-color: rgb(227, 232, 236);
                 width: 700px;
                 text-align: center;
-                margin: 5px;
+                margin-bottom: 50px;
+              margin-left: 50px;
                 float: left;
                 
             }
@@ -46,7 +47,9 @@ font-size:larger;
 
             .cuestionario {
                 float: left;
-                margin: 5px;
+                margin-top: 20px;
+                margin-bottom: 50px;
+              margin-left: 50px;
                 background-color: rgb(194, 216, 235);
                 border: 3px solid rgb(4, 4, 68);
 
