--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,8 @@ border: 1px solid black;
                 background-color: rgb(227, 232, 236);
                 width: 700px;
                 text-align: center;
-                margin: 5px;
+                margin-bottom: 50px;
+              margin-left: 50px;
                 float: left;
                 
             }
