--- a/tienda.html
+++ b/tienda.html
@@ -27,8 +27,9 @@ border: 1px solid black;
                 background-color: rgb(227, 232, 236);
                 width: 700px;
                 text-align: center;
-                margin: 5px;
                 float: left;
+                margin-bottom: 50px;
+              margin-left: 50px;
                 
             }
             .subtitulo {
